syntax = "proto3";


service employeeService  {
  rpc allEmployee(Empty) returns (employeeList) {};
}

message Empty {}

message employeeList {
  uint32 id = 1;
  string firstName = 2;
  string lastName = 3;
  string role = 4;
}